# AVRIO

./: CMakeLists.txt  README.md
I2C_LCD_Controller/: CMakeLists.txt  README  main.c
SMS_GPS_Tracker/: README
cmake/: AVRIOCommon.cmake  Doxygen.cmake
